add create project and list projects

--- a/app/partials/dashboard.html
+++ b/app/partials/dashboard.html
@@ -11,10 +11,10 @@
              <!--header title-->
             <div class="row wrapper border-bottom white-bg page-heading">
                 <div class="col-lg-9">
-                    <h2><i class="fa fa-clone"></i> Dashboard</h2>
+                    <h2><i class="fa fa-dashboard"></i> Dashboard</h2>
                     <ol class="breadcrumb">
                         <li>
-                            flexwork.io
+                            Flexwork
                         </li>
                         <li>
                             Projects
@@ -27,104 +27,9 @@
             </div>
             <!--end header title-->
 
-            <div right-side/>
+            
 
-            <!--wrapper-->
-            <div class="wrapper wrapper-content animated fadeInRight">
-                <!--row2-->
-                <div class="row">
-                    <!--add ibox-->
-                    <div class="col-lg-4">
-                        <a data-toggle="modal" data-target="#add-project">
-                            <div class="ibox-project ibox-add-box float-e-margins">
-                                <div>
-                                    <span><i class="fa fa-plus"></i> Add Project</span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-
-                     <!--project ibox-->
-                    <div class="col-lg-4">
-                        <a href="#1" class="ibox-link">
-                            <div class="ibox-project float-e-margins">
-                                <div class="ibox-project-title">
-                                    <h5>Captain</h5>
-                                    <span class="ibox-project-id">ID: 0003-1</span>
-                                </div>
-                                <div class="ibox-project-content">
-                                    <div class="ibox-project-element">
-                                        <p>Tasks</p>
-                                        <span class="label label-danger">Waiting 5</span>
-                                        <span class="label label-primary">Start 2</span>
-                                        <span class="label label-default">Done 14</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-
-                    <!--project ibox-->
-                    <div class="col-lg-4">
-                        <a href="#1" class="ibox-link">
-                            <div class="ibox-project float-e-margins">
-                                <div class="ibox-project-title">
-                                    <h5>Captain</h5>
-                                    <span class="ibox-project-id">ID: 0003-1</span>
-                                </div>
-                                <div class="ibox-project-content">
-                                    <div class="ibox-project-element">
-                                        <p>Tasks</p>
-                                        <span class="label label-danger">Waiting 5</span>
-                                        <span class="label label-primary">Start 2</span>
-                                        <span class="label label-default">Done 14</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-
-                    <!--project ibox-->
-                    <div class="col-lg-4">
-                        <a href="#2" class="ibox-link">
-                            <div class="ibox-project float-e-margins">
-                                <div class="ibox-project-title">
-                                    <h5>Website</h5>
-                                    <span class="ibox-project-id">ID: 0002-1</span>
-                                </div>
-                                <div class="ibox-project-content">
-                                    <div class="ibox-project-element">
-                                        <p>Tasks</p>
-                                        <span class="label label-danger">Waiting 5</span>
-                                        <span class="label label-primary">Start 2</span>
-                                        <span class="label label-default">Done 14</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-
-                    <!--project ibox-->
-                    <div class="col-lg-4">
-                        <a href="#3" class="ibox-link">
-                            <div class="ibox-project float-e-margins">
-                                <div class="ibox-project-title">
-                                    <h5>Newsletter</h5>
-                                    <span class="ibox-project-id">ID: 0001-1</span>
-                                </div>
-                                <div class="ibox-project-content">
-                                    <div class="ibox-project-element">
-                                        <p>Tasks</p>
-                                        <span class="label label-primary"><i class="fa fa-plus"></i> Add Story</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-
-                </div>
-                <!--end row2-->
-            </div>
+           
             <!--end wrapper-->
 
             <!--footer-->
