--- a/app/partials/team.html
+++ b/app/partials/team.html
@@ -126,7 +126,7 @@
                                         <img width="48" heigth="48" class="img-circle" src="{{member.photo}}" alt="Picture">
                                     </span>
                                     <h5>{{member.surname}} {{member.name}}</h5>
-                                   <span class="ibox-users-job-title">{{member.role}}</span>
+                                   <span class="ibox-users-job-title">{{member.role.Text}}</span>
                                     <span class="ibox-users-location">{{member.country}}, {{member.city}}</span>
                                 </div>
                                 <div class="ibox-users-content">
